modfying terms and links

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ stance? 2) <strong> IP </strong>: does the tweet image make the tweet more persu
 </ol>
 
 <p>Participants can choose whether to address Task A or Task B, or both.</p>
+<p> To participate in this competition fill in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">form</a> before <strong>May 10th 2023</strong></p>
 
 <h3 id="subtask-a-binary-novelty-validity-classification">Subtask A: Argumentative Stance AS Classification</h3>
 
@@ -128,23 +129,22 @@ given topic</p>
 
 <p>Please read the <a href="https://github.com/MeiqiGuo/ArgMining2022-ImageArg/blob/main/data/">Data Description</a> beforehand.</p>
 
-<blockquote>
+<!-- <blockquote>
   <p>If you use the data, please cite our <a href="https://aclanthology.org/">overview paper</a> and the <a href="https://aclanthology.org/">ImageArg paper</a> </p>
-</blockquote>
+</blockquote> -->
 
 <h4 id="scripts to download the data"> Scripts to download the data</h4>
 <ul>
-  <li>Train script: <a href="To be added">To be added</a>
+  <li>Train script: <a href="To be added">Will be available on data release</a>
     <ul>
-      <li>you need to download the training data before TBD</li>
       <li>you’re allowed to extend the train set with further (synthetic) samples. However, if you do that, you have to describe/ provide the algorithm which extends the training set. This algorithm must be automatically executable without any human interaction (hence, without further manual annotation/ manual user feedback)</li>
-    </ul>
+   </ul>
   </li>
-  <li>Dev script: <a href="to be added">to be added</a></li>
+  <li>Dev script: <a href="to be added">Will be available on data release</a></li>
   <ul>
-  <li>you need to download the training data before TBD</li>
+  <li>you need to download the training and development data before  <strong>10th of May 2023</strong></li>
   </ul>
-  <li>Test script: <a href="to be added">without labels</a> =&gt; <a href="to be added">submit</a></li>
+  <li>Test script: <a href="to be added">without labels</a> =&gt; <a href="to be added">available on test date</a></li>
 </ul>
 
 <p><strong>Evaluation:</strong> <strong> F1-score </strong> and <strong> AUC </strong> of participating teams will be reported.</p>
@@ -161,17 +161,16 @@ Persuasive or Not</p>
 
 <h4 id="scripts to download the data"> Scripts to download the data</h4>
 <ul>
-  <li>Train script: <a href="To be added">To be added</a>
+  <li>Train script: <a href="To be added">Will be available on data release</a>
     <ul>
-      <li>you need to download the training data before TBD</li>
       <li>you’re allowed to extend the train set with further (synthetic) samples. However, if you do that, you have to describe/ provide the algorithm which extends the training set. This algorithm must be automatically executable without any human interaction (hence, without further manual annotation/ manual user feedback)</li>
-    </ul>
+   </ul>
   </li>
-  <li>Dev script: <a href="to be added">to be added</a></li>
+  <li>Dev script: <a href="to be added">Will be available on data release</a></li>
   <ul>
-  <li>you need to download the training data before TBD</li>
+  <li>you need to download the training and development data before  <strong>10th of May 2023</strong></li>
   </ul>
-  <li>Test script: <a href="to be added">without labels</a> =&gt; <a href="to be added">submit</a></li>
+  <li>Test script: <a href="to be added">without labels</a> =&gt; <a href="to be added">available on test date</a></li>
 </ul>
 
 <p><strong>Evaluation:</strong> <strong> F1-score </strong> and <strong> AUC </strong> of participating teams will be reported.</p>
@@ -180,14 +179,19 @@ Persuasive or Not</p>
 <h3 id="timeline">Timeline</h3>
 
 <ul>
-  <li>01.08.22: Test data without labels is released</li>
-  <li>05.08.22: Final submission of team results on test data</li>
-  <li>(until) 12.08.22: Publication of overall results of the task</li>
+  <li>05.05.23: Training and Dev scripts released for both subtasks</li>
+  <li>05.10.23: Registration closed</li>
+  <li>07.20.23: Test scripts released for both subtasks</li>
+  <li>07.31.23: Publication of overall results of the task</li>
+  <li>09.1.23: Workshop Paper Due Date</li>
+  <li>10.7.23: Notification of Acceptance</li>
+  <li>10.18.23: Camera-ready papers due</li>
+  <li>12.10.23: Workshop Dates</li>
 </ul>
 
 <h3 id="system-description-paper-submission">System Description Paper Submission</h3>
 
-<p>Please finde more info <a href="https://phhei.github.io/ArgsValidNovel/cfp">here</a></p>
+<p>Please finde more info <a href="https://argmining-org.github.io/2023/">here</a></p>
 
 <h3 id="terms-and-conditions">Terms and Conditions</h3>
 
@@ -198,11 +202,12 @@ Persuasive or Not</p>
   <li>You further agree that the task organizers are under no obligation to release scores and that scores may be withheld if it is the task organizers’ judgement that the submission was incomplete, erroneous, deceptive, or violated the letter or spirit of the competition’s rules. Inclusion of a submission’s scores is not an endorsement of a team or individual’s submission, system, or science.</li>
   <li>A participant can be involved in one team. Participating in more than one team is not recommended, but not forbidden (if the person does not apply the same approach in different teams)
     <ul>
-      <li>There are up to 5 submissions from different approaches (systems) allowed per team and per subtask. <a href="https://github.com/phhei/ArgsValidNovel/blob/gh-pages/submission.md">The submission must be submitted via e-mail</a>. You are allowed to withdraw your submission at anytime until the final deadline (also via e-mail).</li>
+      <li>There are up to 5 submissions from different approaches (systems) allowed per team and per subtask. <a href="not available">The submission must be uploaded here (available on test release)</a>. You are allowed to withdraw your submission at anytime until the final deadline by contacting the organizers.</li>
       <li>You must not use any data from the development split as training instances. You must not use any test instance in the training of the model (also not indirectly for model selection). Approaches that violate this data separation are disqualified.</li>
+      <li>The usage of <strong>Large Language Models LLMs</strong> are permitted as long as they are freely available (eg. LLAMA), we will report scores from paid apis such as OpenAI, but these scores will not be considered in ranking to ensure fairness to all competing teams.</li>    
     </ul>
   </li>
-  <li>Once the competition is over, we will release the gold labels, and you will be able to <a href="https://github.com/phhei/ArgsValidNovel/blob/Baseline/Evaluation/Evaluator.py">determine results</a> on various system variants you may have developed. We encourage you to report results on all of your systems (or system variants) in the system-description paper. However, we will ask you to clearly indicate the result of your official submission.
+  <li>Once the competition is over, we will release the gold labels, and you will be able to determine results on various system variants you may have developed. We encourage you to report results on all of your systems (or system variants) in the system-description paper. However, we will ask you to clearly indicate the result of your official submission.
     <ul>
       <li>We will make the final submissions of the teams public at some point after the evaluation period.</li>
       <li>The organizers and their affiliated institutions makes no warranties regarding the datasets provided, including but not limited to being correct or complete. They cannot be held liable for providing access to the datasets or the usage of the datasets.</li>
