modfying terms and links

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@ Persuasive or Not</p>
 <h3 id="timeline">Timeline</h3>
 
 <ul>
-  <li>05.05.23: Training and Dev scripts released for both subtasks</li>
-  <li>05.10.23: Registration closed</li>
-  <li>07.20.23: Test scripts released for both subtasks</li>
-  <li>07.31.23: Publication of overall results of the task</li>
+  <li>05.20.23: Training and Dev scripts released for both subtasks</li>
+  <!-- <li>05.10.23: Registration closed</li> -->
+  <li>07.20.23: Registration closed and Test scripts released for both subtasks</li>
+  <li>08.1.23: Publication of overall results of the task</li>
   <li>09.1.23: Workshop Paper Due Date</li>
   <li>10.7.23: Notification of Acceptance</li>
   <li>10.18.23: Camera-ready papers due</li>
@@ -204,7 +204,7 @@ Persuasive or Not</p>
     <ul>
       <li>There are up to 5 submissions from different approaches (systems) allowed per team and per subtask. <a href="not available">The submission must be uploaded here (available on test release)</a>. You are allowed to withdraw your submission at anytime until the final deadline by contacting the organizers.</li>
       <li>You must not use any data from the development split as training instances. You must not use any test instance in the training of the model (also not indirectly for model selection). Approaches that violate this data separation are disqualified.</li>
-      <li>The usage of <strong>Large Language Models LLMs</strong> are permitted as long as they are freely available (eg. LLAMA), we will report scores from paid apis such as OpenAI, but these scores will not be considered in ranking to ensure fairness to all competing teams.</li>    
+      <li>The usage of Large Language Models LLMs are permitted as long as they are freely available (eg. LLAMA). Paid APIs for LLMs for (eg. openAI API) will be scored and reported but will not be considered for final ranking to ensure fairness between teams who might not have these APIs available.</li>    
     </ul>
   </li>
   <li>Once the competition is over, we will release the gold labels, and you will be able to determine results on various system variants you may have developed. We encourage you to report results on all of your systems (or system variants) in the system-description paper. However, we will ask you to clearly indicate the result of your official submission.
