modfying terms and links

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ Persuasive or Not</p>
 <h3 id="timeline">Timeline</h3>
 
 <ul>
-  <li>05.20.23: Training and Dev scripts released for both subtasks</li>
-  <!-- <li>05.10.23: Registration closed</li> -->
-  <li>07.20.23: Registration closed and Test scripts released for both subtasks</li>
+  <li>05.15.23: Training and Dev scripts released for both subtasks</li>
+  <li>07.07.23: Registration closed and Test scripts released for both subtasks</li>
+  <li>07.21.23: Final submission deadline.</li>
   <li>08.1.23: Publication of overall results of the task</li>
   <li>09.1.23: Workshop Paper Due Date</li>
   <li>10.7.23: Notification of Acceptance</li>
