modfying terms and links

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Persuasive or Not</p>
 <ul>
   <li>05.15.23: Training and Dev scripts released for both subtasks</li>
   <li>07.07.23: Registration closed and Test scripts released for both subtasks</li>
-  <li>07.21.23: Final submission deadline.</li>
+  <li>07.21.23: Test submission deadline.</li>
   <li>08.1.23: Publication of overall results of the task</li>
   <li>09.1.23: Workshop Paper Due Date</li>
   <li>10.7.23: Notification of Acceptance</li>
