modfying registration form

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ stance? 2) <strong> IP </strong>: does the tweet image make the tweet more persu
 </ol>
 
 <p>Participants can choose whether to address Task A or Task B, or both.</p>
-<p> To participate in this competition fill in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">form</a> before <strong>May 10th 2023</strong></p>
+<p> To participate in this competition fill in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration form.</a>
 
 <h3 id="subtask-a-binary-novelty-validity-classification">Subtask A: Argumentative Stance AS Classification</h3>
 
