--- a/index.html
+++ b/index.html
@@ -137,19 +137,21 @@
         <p>We divide the ImageArg Shared Task into two subtasks. Participants can choose Task A or Task B, or both.</p>
 
 
-        <h3 id="subtask-a-binary-novelty-validity-classification">Subtask A: Argumentative Stance (AS) Classification</h3>
+        <h3 id="subtask-a-binary-novelty-validity-classification">Subtask A: Argumentative Stance (AS)
+            Classification</h3>
 
         <p>Given a tweet composed of a text and image, predict whether the given tweet <strong> Supports </strong> or
             <strong> Opposes </strong> the
-            given topic, which is a binary classification. Two examples of tweets are shown below.</p>
+            given topic, which is a binary classification. Two examples of tweets are shown below. </p>
 
         <img src="example_stance.png" alt="Example of the <strong> AS </strong> classification">
+        <p>The left tweets express strong stance towards support gun control by indicating a house bill about the
+            requirement of background check of all gun sales. The right tweet opposes gun control because it is inclined
+            to self-defense.</p>
 
 
-
-
-<!--        <p>Please read the <a href="https://github.com/MeiqiGuo/ArgMining2022-ImageArg/">Data Description</a>-->
-<!--            beforehand.</p>-->
+        <!--        <p>Please read the <a href="https://github.com/MeiqiGuo/ArgMining2022-ImageArg/">Data Description</a>-->
+        <!--            beforehand.</p>-->
 
         <!-- <blockquote>
           <p>If you use the data, please cite our <a href="https://aclanthology.org/">overview paper</a> and the <a href="https://aclanthology.org/">ImageArg paper</a> </p>
@@ -157,33 +159,45 @@
         <p></p>
 
 
-        <h3 id="subtask-b-recognizing-relative-validity--novelty">Subtask B: Image Persuasiveness (IP) Classification</h3>
+        <h3 id="subtask-b-recognizing-relative-validity--novelty">Subtask B: Image Persuasiveness (IP)
+            Classification</h3>
 
         <p>Given a tweet composed of text and image, predict whether the image makes the tweet text <strong>more
-            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task.  Three examples of tweets are shown below.</p>
+            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task. Three examples of tweets
+            are shown below.</p>
 
-        <img src="example_persuasiveness01.png" alt="Example of the <strong> IP </strong> classification">
+        <img src="example_persuasiveness.png" alt="Example of the <strong> IP </strong> classification">
+        <p>The left tweet has an image not even relevant to gun control topic. It does not improve the
+            persuasiveness of the left tweet that argues to focus on mental health instead of gun restriction. The tweet
+            image
+            on the right makes the tweet text (and its stance) more persuasive because it provides strong evidence to
+            show the statistics of the murder
+            rate in major U.S. cities due to restrict gun control laws, so citizens cannot easily arm themselves.</p>
 
+        <p>Please read task details in the <a href="https://aclanthology.org/2022.argmining-1.1.pdf">paper</a> if you
+            are interested.</p>
 
-        <p>This is task is also a binary classification task.</p>
+        <h2 id="scripts to download the data"> Scripts to download the dataset</h2>
+        <p>The dataset to download should only be used for participating in the ImageArg Shared Task. Any
+            other use is explicitly prohibited. Participants are not allowed to redistribute the dataset per <a href="https://developer.twitter.com/en/developer-terms/policy">Twitter
+            Developer Policy</a>.</p>
 
-        <h4 id="scripts to download the data"> Scripts to download the data</h4>
-        <ul>
-            <li>Train script: <a href="To be added">Will be available on data release</a>
-                <ul>
-                    <li>you’re allowed to extend the train set with further (synthetic) samples. However, if you do
-                        that, you have to describe/ provide the algorithm which extends the training set. This algorithm
+           <p> All the tweets are instantly crawled from Twitter. We are aware some tweets could not be available when
+            participants start to download (e.g., a tweet could be deleted by its author). We will regularly monitor the
+            dataset to provide data patches that will replace invalid tweets with new ones. Participants are required to fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform">Google
+                Form</a> in order to receive data patches and the shared task updates.</p>
+
+        <p>Participants are allowed to extend only the training set with further (synthetic) samples. However, if do
+                        that, participants have to describe and the algorithm which extends the training set in the system description paper submission. This algorithm
                         must be automatically executable without any human interaction (hence, without further manual
-                        annotation/ manual user feedback)
-                    </li>
-                </ul>
-            </li>
-            <li>Dev script: <a href="to be added">Will be available on data release</a></li>
+                        annotation or manual user feedback).</p>
+        <ul>
+            <li>Train and dev data script: <a href="https://github.com/ImageArg/ImageArg-Shared-Task">Here</a></li>
+<!--            <li>Dev script: <a href="to be added">TBA</a></li>-->
             <!-- <ul>
             <li>you need to download the training and development data before  <strong>10th of May 2023</strong></li>
             </ul> -->
-            <li>Test script: <a href="to be added">without labels</a> =&gt; <a href="to be added">available on test
-                date</a></li>
+            <li>Test data script: <a href="">TBA</a></li>
         </ul>
 
         <p><strong>Evaluation:</strong> <strong> F1-score </strong> and <strong> AUC </strong> of participating teams
