--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
             show the statistics of the murder
             rate in major U.S. cities due to restrict gun control laws, so citizens cannot easily arm themselves.</p>
 
-        <p>Please read task details in the <a href="https://aclanthology.org/2022.argmining-1.1.pdf">paper</a> if you
+        <p>Please read details about AS and IP in the <a href="https://aclanthology.org/2022.argmining-1.1.pdf">paper</a> if you
             are interested.</p>
 
-        <h2 id="scripts to download the data"> Scripts to download the dataset</h2>
+        <h2 id="scripts to download the data"> Scripts to Download the Dataset</h2>
         <p>The dataset to download should only be used for participating in the ImageArg Shared Task. Any
             other use is explicitly prohibited. Participants are not allowed to redistribute the dataset per <a href="https://developer.twitter.com/en/developer-terms/policy">Twitter
             Developer Policy</a>.</p>
 
            <p> All the tweets are instantly crawled from Twitter. We are aware some tweets could not be available when
             participants start to download (e.g., a tweet could be deleted by its author). We will regularly monitor the
-            dataset to provide data patches that will replace invalid tweets with new ones. Participants are required to fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform">Google
+            dataset to provide data patches that will replace invalid tweets with new annotations. Participants are required to fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform">Google
                 Form</a> in order to receive data patches and the shared task updates.</p>
 
         <p>Participants are allowed to extend only the training set with further (synthetic) samples. However, if do
