--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
         <h2 id="system-description-paper-submission">3. Call for Papers (System Description Papers)</h2>
 
         <p>
-            The shared task of the ArgMining 2022 invites the submission of system description short papers from teams
+            The ImageArg Shared Task invites the submission of system description papers from teams
             that have participated. Accepted papers will be published in the proceeding of <a
                 href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         </p>
 
 <!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
-        <p>By default, we accept only short papers (at most 4 pages, including references and optional appendix). All
+        <p>By default, we only accept short papers (at most 4 pages, including references and optional appendix). All
             papers will be treated equally in the workshop proceedings. Moreover, authors are expected to adhere to the
             ethical code set out in the ACL Code of Ethics. Submissions that violate any of the policies will be
             rejected without review.
