--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             persuasiveness in natural language applications. However, these efforts have mainly focused on the textual
             modality, neglecting the influence of other modalities. <a
                     href="https://aclanthology.org/2022.argmining-1.1.pdf">Liu et al.</a> introduced a new multimodal
-            dataset called <strong> ImageArg </strong> This dataset includes persuasive tweets along with associated
+            dataset called <strong> ImageArg </strong>. This dataset includes persuasive tweets along with associated
             images, aiming to identify the image's stance towards the tweet and determine its persuasiveness score
             concerning a specific topic. The ImageArg dataset is a significant step towards advancing multimodal
             persuasive text analysis and opens up avenues for exploring the persuasive impact of images in social media.
