--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
             <li>07/15/23: Registration closed and Test scripts released for both subtasks</li>
             <li>07/21/23: Test submission deadline.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
-            <li>09/01/23: System Description Paper Due</li>
-            <li>10/02/23: Notification of Paper Acceptance</li>
+            <li>09/01/23: System description paper due</li>
+            <li>10/02/23: Notification of paper acceptance</li>
             <li>10/09/23: Camera-ready papers due</li>
-            <li>12/10/23: Workshop Dates</li>
+            <li>12/10/23: Workshop dates</li>
         </ul>
         <hr>
         <h2 id="terms-and-conditions">5. Terms and Conditions</h2>
