--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
 <!--        The timeline for shared task and system description paper submissions.-->
         <ul>
             <li>05/15/23: Training and Dev scripts released for both subtasks</li>
-            <li>07/15/23: Registration closed and Test scripts released for both subtasks</li>
-            <li>07/21/23: Test submission deadline.</li>
+            <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
+            <li>07/21/23: Shared task submission due.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
             <li>09/01/23: System description paper due</li>
             <li>10/02/23: Notification of paper acceptance</li>
