--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
         The ImageArg dataset is composed of tweets (images and text) from controversial topics,
-        namely <strong> gun control </strong> and <strong> abortion </strong>. The the dataset
+        namely <strong> gun control </strong> and <strong> abortion</strong>. The the dataset
         contains 2-dimensions of annotations: Argumentative Stance (AS), Image Persuasiveness (IP), of which
         each dimension addresses a unique research question: <strong> 1)</strong> AS: does the tweet have an
         argumentative
@@ -326,9 +326,9 @@
                     <li><a href="http://yangzhongcs.com/">Yang Zhong</a>, Ph.D. Student of Computer Science</li>
                     <li><a href="https://people.cs.pitt.edu/~litman/">Diane Litman</a>, Professor of Computer Science
                     </li>
-                    <li><strong>Contact</strong> imagearg [at] gmail.com</li>
+                    <li><strong>Contact</strong>: imagearg [at] gmail.com</li>
 <!--                </ul>-->
-            <li><strong>Affiliation</strong> University of Pittsburgh </li>
+            <li><strong>Affiliation</strong>: University of Pittsburgh </li>
         </ul>
 
 
