--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             when
             participants start to download (e.g., a tweet could be deleted by its author). Organizers will regularly
             monitor the
-            dataset to provide data patches that will replace invalid tweets with new annotations. Participants are
+            dataset to provide data patches that will replace invalid tweets with new annotated ones. Participants are
             required to fill out the <a
                     href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform">Google
                 Form</a> in order to receive data patches and the shared task updates.</p>
@@ -200,7 +200,7 @@
             annotation or manual user feedback).</p>
 
         <p><strong>Shared Task Evaluation:</strong> <strong> F1-score </strong> of participating teams
-            will be used for ranking, but participants are free to include other metrics (e.g., AUC) in system
+            will be used for ranking, but participants are free to include other metrics (e.g., AUC) in the system
             description paper submissions. </p>
 
 
@@ -248,13 +248,13 @@
         <h2 id="timeline">4. Timeline</h2>
 <!--        The timeline for shared task and system description paper submissions.-->
         <ul>
-            <li>05/15/23: Training and Dev scripts released for both subtasks</li>
+            <li>05/15/23: Training and Dev scripts (data) released for both subtasks</li>
             <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
             <li>07/21/23: Shared task submission due.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
             <li>09/01/23: System description paper due</li>
             <li>10/02/23: Notification of paper acceptance</li>
-            <li>10/09/23: Camera-ready papers due</li>
+            <li>10/09/23: Camera-ready paper due</li>
             <li>12/10/23: Workshop dates</li>
         </ul>
         <hr>
@@ -335,7 +335,7 @@
     </section>
     <footer>
 
-        <p>This project is maintained by <a href="https://github.com/ImageArg">ImageArg</a></p>
+<!--        <p>This project is maintained by <a href="https://github.com/ImageArg">ImageArg</a></p>-->
         <p>This website is developed based on and partially reusing <a href="https://phhei.github.io/ArgsValidNovel/">ArgMining22-Shared-Task
             </a></p>
         <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
