--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         The ImageArg dataset is composed of tweets (images and text) from controversial topics,
         namely <strong> gun control </strong> and <strong> abortion</strong>. The the dataset
         contains 2-dimensions of annotations: Argumentative Stance (AS), Image Persuasiveness (IP), of which
-        each dimension addresses a unique research question: <strong> 1)</strong> AS: does the tweet have an
+        each dimension addresses a unique research question: 1) AS: does the tweet have an
         argumentative
-        stance? <strong> 2)</strong> IP: does the tweet image make the tweet more persuasive?<p></p>
+        stance? 2) IP: does the tweet image make the tweet more persuasive?<p></p>
 
         <p>ImageArg Shared Task is divided into two subtasks. Participants can choose Task A or Task B, or both.</p>
 
