--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             deadline by contacting the organizers. </p>
 
         <ul>
-            <li>Train and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task">Here</a></li>
+            <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task">Here</a></li>
             <li>Test data (without labels) download: <a href="">TBA</a></li>
             <li>Evaluation script: <a href="">TBA</a></li>
             <li>Shared Task Submission: <a href="">TBA</a></li>
