--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             published in the proceeding of <a
                     href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.</p>
 
-        <p>To participate in this competition, please fill in this <a
+        <p>To participate, please fill in this <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
-            form.</a> Please feel free to join <a
+            form</a> and feel free to join <a
                 href="https://join.slack.com/t/imagearg/shared_invite/zt-1ss5hdb6d-eNCaWOAEe4O_8UE1gQxIxA">ImageArg
-            Slack</a> for conversations.</p>
+            Slack</a> for conversations. Please be aware that some tweet content may be upsetting or triggering.</p>
         </p>
 
 
@@ -141,7 +141,7 @@
 
         <p>Given a tweet composed of a text and image, predict whether the given tweet <strong> Supports </strong> or
             <strong> Opposes </strong> the
-            given topic, which is a binary classification. Two examples of tweets are shown below. </p>
+            given topic, which is a binary classification. Two examples are shown below. </p>
 
         <img src="example_stance.png" alt="Example of the <strong> AS </strong> classification">
         <p>The left tweets express strong stance towards support gun control by indicating a house bill about the
@@ -162,8 +162,7 @@
             Classification</h3>
 
         <p>Given a tweet composed of text and image, predict whether the image makes the tweet text <strong>more
-            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task. Three examples of tweets
-            are shown below.</p>
+            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task. Two examples are shown below.</p>
 
         <img src="example_persuasiveness.png" alt="Example of the <strong> IP </strong> classification">
         <p>The left tweet has an image not even relevant to gun control topic. It does not improve the
