--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
             form</a> and feel free to join <a
                 href="https://join.slack.com/t/imagearg/shared_invite/zt-1ss5hdb6d-eNCaWOAEe4O_8UE1gQxIxA">ImageArg
-            Slack</a> for conversations. Please be aware that some tweet content may be upsetting or triggering.</p>
+            Slack</a> for conversations.</p>
         </p>
 
 
@@ -133,7 +133,8 @@
         argumentative
         stance? 2) IP: does the tweet image make the tweet more persuasive?<p></p>
 
-        <p>ImageArg Shared Task is divided into two subtasks. Participants can choose Task A or Task B, or both.</p>
+        <p>ImageArg Shared Task is divided into two subtasks. Participants can choose Task A or Task B, or both. Please
+            be aware that some tweet content may be upsetting or triggering.</p>
 
 
         <h3 id="subtask-a-binary-novelty-validity-classification">Subtask A: Argumentative Stance (AS)
@@ -162,7 +163,8 @@
             Classification</h3>
 
         <p>Given a tweet composed of text and image, predict whether the image makes the tweet text <strong>more
-            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task. Two examples are shown below.</p>
+            Persuasive</strong> or <strong>Not</strong>, which is a binary classification task. Two examples are shown
+            below.</p>
 
         <img src="example_persuasiveness.png" alt="Example of the <strong> IP </strong> classification">
         <p>The left tweet has an image not even relevant to gun control topic. It does not improve the
@@ -203,8 +205,9 @@
             description paper submissions. </p>
 
 
-        <p><strong>Shared Task Submission:</strong> There are up to 5 submissions from different approaches (systems) allowed per team and per
-                        subtask. Participants are allowed to withdraw your submission at anytime until the final
+        <p><strong>Shared Task Submission:</strong> There are up to 5 submissions from different approaches (systems)
+            allowed per team and per
+            subtask. Participants are allowed to withdraw your submission at anytime until the final
             deadline by contacting the organizers. </p>
 
         <ul>
@@ -226,26 +229,25 @@
 
         </p>
 
-<!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
+        <!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
         <p>By default, we only accept short papers (at most 4 pages, including references and optional appendix). All
             papers will be treated equally in the workshop proceedings. Moreover, authors are expected to adhere to the
             ethical code set out in the ACL Code of Ethics. Submissions that violate any of the policies will be
             rejected without review.
 
         <p>Please use the <a href="https://2023.emnlp.org/calls/style-and-formatting/">EMNLP 2023 style sheets</a> for
-        formatting your paper. </p>
+            formatting your paper. </p>
 
         <p><strong>Paper Submission:</strong> address is to be announced.</p>
 
         <!--Please use the CAMERA-READY, non-anonymized option.-->
 
-<!--        <h3 id="paper-guidance">Suggested Paper Structure</h3>-->
-
+        <!--        <h3 id="paper-guidance">Suggested Paper Structure</h3>-->
 
 
         <hr>
         <h2 id="timeline">4. Timeline</h2>
-<!--        The timeline for shared task and system description paper submissions.-->
+        <!--        The timeline for shared task and system description paper submissions.-->
         <ul>
             <li>05/15/23: Training and Dev scripts (data) released for both subtasks</li>
             <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
@@ -316,27 +318,27 @@
 
         <ul>
 
-<!--                <ul>-->
-                    <li><a href="https://people.cs.pitt.edu/~zhexiong/">Zheixong Liu</a>, Ph.D. Student of Computer
-                        Science
-                    </li>
-                    <li><a href="https://engsalem.github.io/">Mohamed Elaraby</a>, Ph.D. Student of Computer Science
-                    </li>
-                    <li><a href="http://yangzhongcs.com/">Yang Zhong</a>, Ph.D. Student of Computer Science</li>
-                    <li><a href="https://people.cs.pitt.edu/~litman/">Diane Litman</a>, Professor of Computer Science
-                    </li>
-                    <li><strong>Contact</strong>: imagearg [at] gmail.com</li>
-<!--                </ul>-->
-            <li><strong>Affiliation</strong>: University of Pittsburgh </li>
+            <!--                <ul>-->
+            <li><a href="https://people.cs.pitt.edu/~zhexiong/">Zheixong Liu</a>, Ph.D. Student of Computer
+                Science
+            </li>
+            <li><a href="https://engsalem.github.io/">Mohamed Elaraby</a>, Ph.D. Student of Computer Science
+            </li>
+            <li><a href="http://yangzhongcs.com/">Yang Zhong</a>, Ph.D. Student of Computer Science</li>
+            <li><a href="https://people.cs.pitt.edu/~litman/">Diane Litman</a>, Professor of Computer Science
+            </li>
+            <li><strong>Contact</strong>: imagearg [at] gmail.com</li>
+            <!--                </ul>-->
+            <li><strong>Affiliation</strong>: University of Pittsburgh</li>
         </ul>
 
 
     </section>
     <footer>
 
-<!--        <p>This project is maintained by <a href="https://github.com/ImageArg">ImageArg</a></p>-->
+        <!--        <p>This project is maintained by <a href="https://github.com/ImageArg">ImageArg</a></p>-->
         <p>This website is developed based on and partially reusing <a href="https://phhei.github.io/ArgsValidNovel/">ArgMining22-Shared-Task
-            </a></p>
+        </a></p>
         <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
     </footer>
