--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
         <p>Participants are welcome to submit system description papers for the shared task. Accepted papers will be
             published in the proceeding of <a
-                    href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.</p>
+                    href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>. 
 
-        <p>To participate, please fill in this <a
+        To participate, please fill in this <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
             form</a> and feel free to join <a
                 href="https://join.slack.com/t/imagearg/shared_invite/zt-1ss5hdb6d-eNCaWOAEe4O_8UE1gQxIxA">ImageArg
             Slack</a> for conversations.</p>
-        </p>
+
 
 
         <hr>
