--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
 
         <p>Co-located with <a href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a></a> at <a
                 href="https://2023.emnlp.org/">EMNLP 2023</a> in Singapore. </p>
-
-
-        <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub <small>ImageArg/ImageArg-Shared-Task</small></a>
+        <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
+            <small>ImageArg/ImageArg-Shared-Task</small></a></p>
+        <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[07/05]</b> Registration will close on 07/07 (Anywhere on Earth).<br>
+            <b>[07/03]</b> Updated data-downloading scripts. Please pull the
+            <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> new code</a>.<br>
+            <b>[05/20]</b> To participate, please fill in this <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
+            form</a>.
         </p>
 
 
@@ -111,7 +117,7 @@
 
         <p>Participants are welcome to submit system description papers for the shared task. Accepted papers will be
             published in the proceeding of <a
-                    href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>. 
+                    href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         To participate, please fill in this <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
