--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
             <b>[07/05]</b> Registration will close on 07/07 (Anywhere on Earth).<br>
-            <b>[07/03]</b> Updated data-downloading scripts. Please pull the
+            <b>[07/03]</b> Update data-downloading scripts. Please pull the
             <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> new code</a>.<br>
             <b>[05/20]</b> To participate, please fill in this <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
