--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
-            <b>[07/05]</b> Registration will close on 07/07 (Anywhere on Earth).<br>
+            <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>. Evaluation script will be out soon.<br>
+            <b>[07/05]</b> Registration will be closed on 07/07 (Anywhere on Earth).<br>
             <b>[07/03]</b> Update data-downloading scripts. Please pull the
             <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> new code</a>.<br>
-            <b>[05/20]</b> To participate, need to fill in this <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
-            form</a>.
+<!--            <b>[05/20]</b> To participate, need to fill in this <a-->
+<!--                href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration-->
+<!--            form</a>.-->
         </p>
 
 
