--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                     href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a>.
 
         To participate, please fill in this <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSci3TSw6ylcWnjXQsoUjh3buAQx7IdgiJwrJDR2pDHMm8DIpQ/viewform?usp=pp_url">registration
-            form</a> and feel free to join <a
+                href="Invalid">registration
+            form(Invalid)</a> and feel free to join <a
                 href="https://join.slack.com/t/imagearg/shared_invite/zt-1ss5hdb6d-eNCaWOAEe4O_8UE1gQxIxA">ImageArg
             Slack</a> for conversations.</p>
 
