--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <ul>
             <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task">Here</a></li>
-            <li>Test data (without labels) download: <a href="">TBA</a></li>
+            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task/blob/main/get_test_data_v2.py">here</a></li>
             <li>Evaluation script: <a href="">TBA</a></li>
             <li>Shared Task Submission: <a href="">TBA</a></li>
         </ul>
