--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             deadline by contacting the organizers. </p>
 
         <ul>
-            <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task">Here</a></li>
-            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task/blob/main/get_test_data_v2.py">here</a></li>
+            <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
+            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">here</a></li>
             <li>Evaluation script: <a href="">TBA</a></li>
             <li>Shared Task Submission: <a href="">TBA</a></li>
         </ul>
