--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <ul>
             <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
-            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">here</a></li>
+            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
             <li>Evaluation script: <a href="">TBA</a></li>
             <li>Shared Task Submission: <a href="">TBA</a></li>
         </ul>
