--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
-            <b>[07/17]</b> The task submission (predicting results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
+            <b>[07/17]</b> The task submission (predicted results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
 <!--            <b>[07/12]</b> The submission portal and evaluation script will be out by 7/16 as we received a large number of registrations that need us to refine the submission procedure. Thanks for your patience! <br>-->
             <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>. Evaluation script will be out soon.<br>
             <b>[07/05]</b> Registration will be closed on 07/07 (Anywhere on Earth).<br>
