--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[07/19]</b> The submission (predicted results) deadline is extended to 07/26 (AoE). <br>
             <b>[07/17]</b> The task submission (predicted results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
 <!--            <b>[07/12]</b> The submission portal and evaluation script will be out by 7/16 as we received a large number of registrations that need us to refine the submission procedure. Thanks for your patience! <br>-->
             <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>.<br>
@@ -261,7 +262,7 @@
         <ul>
             <li>05/15/23: Training and Dev scripts (data) released for both subtasks</li>
             <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
-            <li>07/21/23: Shared task submission due.</li>
+            <li><s>07/21/23</s>: 07/26/2023: Shared task submission due.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
             <li>09/01/23: System description paper due</li>
             <li>10/02/23: Notification of paper acceptance</li>
