--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!--            <b>[07/12]</b> The submission portal and evaluation script will be out by 7/16 as we received a large number of registrations that need us to refine the submission procedure. Thanks for your patience! <br>-->
             <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>.<br>
 <!--            Evaluation script will be out soon.<br>-->
-            <b>[07/05]</b> Registration will be closed on 07/07 (Anywhere on Earth).<br>
+            <b>[07/05]</b> Registration will be closed on 07/07 (AoE).<br>
             <b>[07/03]</b> Update data-downloading scripts. Please pull the
             <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> new code</a>.<br>
 <!--            <b>[05/20]</b> To participate, need to fill in this <a-->
